qa 3 overflow fix

--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,10 @@ body {
   max-width: 100% !important;
 }
 
+main {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 ul,
 ol {
   margin-left: 1.1em;
@@ -116,7 +120,8 @@ a:hover {
 
 #top-bar {
   position: fixed;
-  top: 0px;
+  top: 0;
+  left: 0;
   z-index: 2;
   width: 100%;
   height: 90px;
@@ -124,13 +129,18 @@ a:hover {
   padding: 0 11%;
   background: rgb(251, 251, 250);
   box-shadow: 0px 4px 7px 5px rgba(117, 117, 117, 0.04);
-  display: flex;
-  align-items: center;
 
   @media screen and (max-width: 768px) {
     padding: 0;
     height: auto;
     align-items: unset;
+  }
+
+  .wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -143,10 +153,10 @@ a:hover {
   @media screen and (max-width: 768px) {
     width: 50px;
     height: auto;
+  }
 
-    a {
-      display: flex;
-    }
+  a {
+    display: flex;
   }
 }
 
@@ -304,6 +314,9 @@ section {
     overflow: hidden;
     transition: width 0.3s 0.3s ease-in-out;
 
+    .overflow {
+      overflow-y: auto;
+    }
     .col-1,
     .col-2 {
       opacity: 0;
@@ -532,7 +545,8 @@ section {
   }
 }
 .closing {
-  height: 200px;
+  // height: 200px;
+  padding: 2rem 11%;
 }
 
 .col-1 {
@@ -776,4 +790,9 @@ section {
 
 footer {
   padding: 2rem 11%;
+  display: flex;
+  align-items: center;
+  h4 {
+    margin: 0 1rem 0 0;
+  }
 }
